# wca-data-platform

./: LICENSE  README.md
data-ingestion-pipeline/: README.md  pyproject.toml
data-ingestion-pipeline/scripts/: check_competitions_by_country_query_performance.py  check_db_connection.py  check_db_creation.py  check_ranks_by_country_query_performance.py  check_results_by_country_query_performance.py  run_mexico_pipeline.py
data-ingestion-pipeline/scripts/queries_benchmarking/: competitions_by_country.py  ranks_average_by_country.py  results_by_country.py  scrambles_by_country.py
data-ingestion-pipeline/src/data_ingestion_pipeline/: __init__.py  db.py
data-ingestion-pipeline/src/data_ingestion_pipeline/extract/: __init__.py  championships.py  competitions.py  continents.py  countries.py  events.py  formats.py  persons.py  ranks_average.py  ranks_single.py  results.py  round_types.py  scrambles.py
data-ingestion-pipeline/src/data_ingestion_pipeline/load/: __init__.py  load.py
data-ingestion-pipeline/src/data_ingestion_pipeline/pipeline/: __init__.py  championships.py  competitions.py  continents.py  countries.py  events.py  formats.py  mexico.py  persons.py  ranks_average.py  ranks_single.py  results.py  round_types.py  scrambles.py
db-configuration/: .gitignore  README.md  wca_index_cleaning.sql  wca_index_creation.sql
